objects/K_Employee__c.object
<CustomObject>
    <description>In this store basic information of an employee.</description>
    <label>K Employee</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>K Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Gender</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skills__c</fullName>
        <label>Skills</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
                <value>
                    <fullName>Pipeline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hindi</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Telugu</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_No__c</fullName>
        <label>Mobile No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Payee_Name__c</fullName>
        <label>Payee Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Phone__c</fullName>
        <label>Other Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Reffered_By__c</fullName>
        <label>Reffered By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Employee_Type__c</fullName>
        <label>Employee Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Free Lancer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Father_s_Name__c</fullName>
        <label>Father&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_s_Name__c</fullName>
        <label>Mother&apos;s Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Language__c</fullName>
        <label>Other Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAN_Card_Number__c</fullName>
        <description>Enter the PAN card number which is alphanumeric type.</description>
        <label>PAN Card Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhatsApp_Number__c</fullName>
        <label>WhatsApp Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Completion_Date1__c</fullName>
        <description>Completion Date of Certification1</description>
        <label>Completion Date1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Completion_Date2__c</fullName>
        <description>Completion date of Certificate2</description>
        <label>Completion Date2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Aadhaar_Card_Number__c</fullName>
        <label>Aadhaar Card Number</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Assigned_To__c</fullName>
        <label>Current Assigned To</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Certification1__c</fullName>
        <label>Course/Certification1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Certification2__c</fullName>
        <label>Course/Certification2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Communicaition_Date__c</fullName>
        <label>Last Communicaition Date</label>
        <type>Date</type>
    </fields>
</CustomObject>